attempt #2 for fixing alignment

--- a/css/sass/includes/_editor.scss
+++ b/css/sass/includes/_editor.scss
@@ -2,13 +2,12 @@
 	width: 95%;
 	margin: 0 auto;
 	margin-top: 50px;
-	display: block;
 	text-align: center;
 	height: 0;
 
 	.block {
-		width: 32%;
-		display: inline-block;
+		width: 32.66%;
+		float: left;
 		margin: 0 auto;
 		text-align: left;
 		cursor: text;
