--- a/css/sass/variables/_variables.scss
+++ b/css/sass/variables/_variables.scss
@@ -8,7 +8,7 @@ $large-font-size: 18px;
 $base-font-family: 'Inconsolata';
 
 // colors
-$accent-color: #222222;
+$accent-color: #151515;
 $accent-color-light: #666666;
 $chalk: #F3F2F2;
 
