--- a/css/stylesheets/screen.css
+++ b/css/stylesheets/screen.css
@@ -97,7 +97,7 @@ header #header-wrapper .intro .logo a, header #header-wrapper .intro .new-scrib 
   font-family: "Inconsolata";
   font-size: 16px;
   text-decoration: none;
-  color: #222222;
+  color: #151515;
   display: inline-block;
   padding: 3px 7px;
 }
@@ -108,7 +108,7 @@ header #header-wrapper .intro .new-scrib {
 /* line 28, ../sass/includes/_header.scss */
 header #header-wrapper .intro .new-scrib a {
   color: #F3F2F2;
-  background: #222222;
+  background: #151515;
   margin-right: 5px;
 }
 /* line 38, ../sass/includes/_header.scss */
@@ -189,7 +189,7 @@ header #header-wrapper .user li .dropdown li a {
 }
 /* line 102, ../sass/includes/_header.scss */
 header #header-wrapper .user li .dropdown li a:hover {
-  background: #222222;
+  background: #151515;
   color: white;
 }
 /* line 111, ../sass/includes/_header.scss */
@@ -197,7 +197,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   text-decoration: none;
   font-family: "Inconsolata";
   font-size: 16px;
-  color: #222222;
+  color: #151515;
   display: inline-block;
 }
 
@@ -226,7 +226,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   bottom: 0;
   margin: 10px;
   padding: 0px 0 0px 7px;
-  color: #222222;
+  color: #151515;
   background: white;
   font-family: "Inconsolata";
   text-transform: lowercase;
@@ -255,7 +255,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
 }
 /* line 43, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-pop .view-scrib, #content-wrapper .container12 .row .column4 .scrib-pop .view-scrib {
-  color: #222222;
+  color: #151515;
   text-decoration: none;
   font-family: "Inconsolata";
   font-size: 16px;
@@ -285,7 +285,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   font-family: "Inconsolata";
   margin: 0;
   display: inline-block;
-  color: #222222;
+  color: #151515;
 }
 /* line 72, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-info a i, #content-wrapper .container12 .row .column4 .scrib-info a i {
@@ -304,13 +304,13 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   font-family: "Inconsolata";
   text-decoration: none;
   margin-right: 5px;
-  color: #222222;
+  color: #151515;
   padding: 3px 7px;
 }
 /* line 96, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .explore .active {
   background: #F3F2F2;
-  color: #222222;
+  color: #151515;
 }
 
 /* line 1, ../sass/includes/_sign-in.scss */
@@ -331,7 +331,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   text-decoration: none;
   font-family: "Inconsolata";
   font-size: 16px;
-  color: #222222;
+  color: #151515;
   margin-bottom: 20px;
 }
 
@@ -345,7 +345,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   text-decoration: none;
   font-family: "Inconsolata";
   font-size: 13px;
-  color: #222222;
+  color: #151515;
   text-align: center;
   display: block;
   margin: 15px 0;
@@ -375,7 +375,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
 #sign-up-wrapper input[type="text"]::-webkit-input-placeholder, #sign-up-wrapper input[type="password"]::-webkit-input-placeholder, #sign-up-wrapper input[type="submit"]::-webkit-input-placeholder, #sign-in-wrapper input[type="text"]::-webkit-input-placeholder, #sign-up-wrapper input[type="text"]::-webkit-input-placeholder, #sign-in-wrapper input[type="password"]::-webkit-input-placeholder, #sign-up-wrapper input[type="password"]::-webkit-input-placeholder, #sign-in-wrapper input[type="submit"]::-webkit-input-placeholder, #sign-up-wrapper input[type="submit"]::-webkit-input-placeholder {
   font-family: "Inconsolata";
   font-size: 13px;
-  color: #222222;
+  color: #151515;
 }
 /* line 72, ../sass/includes/_sign-in.scss */
 #sign-up-wrapper input[type="text"]:focus, #sign-up-wrapper input[type="password"]:focus, #sign-up-wrapper input[type="submit"]:focus, #sign-in-wrapper input[type="text"]:focus, #sign-up-wrapper input[type="text"]:focus, #sign-in-wrapper input[type="password"]:focus, #sign-up-wrapper input[type="password"]:focus, #sign-in-wrapper input[type="submit"]:focus, #sign-up-wrapper input[type="submit"]:focus {
@@ -449,7 +449,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
 /* line 20, ../sass/includes/_profile.scss */
 #content-wrapper .container12 .row .column12 .username, #content-wrapper .container12 .row .column12 .user-info a, #content-wrapper .container12 .row .column12 .bio a {
   font-family: "Inconsolata";
-  color: #222222;
+  color: #151515;
   text-decoration: none;
   font-size: 16px;
 }
@@ -482,19 +482,18 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   width: 95%;
   margin: 0 auto;
   margin-top: 50px;
-  display: block;
   text-align: center;
   height: 0;
 }
-/* line 9, ../sass/includes/_editor.scss */
+/* line 8, ../sass/includes/_editor.scss */
 #editor-layout .block {
-  width: 32%;
-  display: inline-block;
+  width: 32.66%;
+  float: left;
   margin: 0 auto;
   text-align: left;
   cursor: text;
 }
-/* line 16, ../sass/includes/_editor.scss */
+/* line 15, ../sass/includes/_editor.scss */
 #editor-layout .block textarea {
   background: #F3F2F2;
   border: none;
@@ -502,36 +501,36 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   width: 100%;
   height: 380px;
 }
-/* line 23, ../sass/includes/_editor.scss */
+/* line 22, ../sass/includes/_editor.scss */
 #editor-layout .block textarea:focus {
   outline: none;
 }
-/* line 28, ../sass/includes/_editor.scss */
+/* line 27, ../sass/includes/_editor.scss */
 #editor-layout .block:nth-child(2) {
   margin: 0 1%;
 }
-/* line 32, ../sass/includes/_editor.scss */
+/* line 31, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info {
   padding: 10px;
   background: #F3F2F2;
   position: relative;
 }
-/* line 41, ../sass/includes/_editor.scss */
+/* line 40, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info .editor-settings p {
   font-family: "Inconsolata";
 }
-/* line 46, ../sass/includes/_editor.scss */
+/* line 45, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info .editor-settings a {
-  color: #222222;
+  color: #151515;
   text-decoration: none;
 }
-/* line 50, ../sass/includes/_editor.scss */
+/* line 49, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info .editor-settings a .fa-cog {
   position: absolute;
   right: 15px;
   top: 11px;
 }
-/* line 59, ../sass/includes/_editor.scss */
+/* line 58, ../sass/includes/_editor.scss */
 #editor-layout .block .CodeMirror {
   padding: 10px 0;
   text-align: left;
@@ -550,7 +549,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
 }
 /* line 11, ../sass/includes/_thanks.scss */
 #thanks-content p {
-  color: #222222;
+  color: #151515;
   font-family: "Inconsolata";
   font-size: 16px;
   text-align: center;
@@ -559,4 +558,9 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
 /* line 19, ../sass/includes/_thanks.scss */
 #thanks-content span {
   color: #FA8072;
+}
+
+/* line 1, ../sass/includes/_settings.scss */
+.image-settings {
+  margin-top: 30px;
 }
